[components] changed line-height to avoid truncating

--- a/semcore/button/src/style/button.shadow.css
+++ b/semcore/button/src/style/button.shadow.css
@@ -295,7 +295,7 @@ SInner[loading] {
 
 SText {
   display: inline-flex;
-  line-height: 1;
+  line-height: 1.2;
 }
 
 SText[size='s'] {
